Closed Bug 929439 Opened 11 years ago Closed 11 years ago

BufferUnrotate.cpp compile failure: memcpy’ was not declared in this scope

Categories

(Core :: Graphics: Layers, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: stevensn, Assigned: stevensn)

References

Details

Attachments

(1 file, 1 obsolete file)

BufferUnrotate.cpp does not compile for me on Linux/Debian/ppc32

gfx/layers/BufferUnrotate.cpp: In function ‘void BufferUnrotate(uint8_t*, int, int, int, int, int)’:

BufferUnrotate.cpp:34:60: error: ‘memcpy’ was not declared in this scope
Attached patch 929439.diff (obsolete) — Splinter Review
Adding #include<string.h> fixes this compiler error on my platform
Attachment #820314 - Flags: review?(bgirard)
Attachment #820314 - Flags: review?(bgirard) → review+
Keywords: checkin-needed
Please could you update your hgrc so the patch includes the author line & re-upload? See:
https://developer.mozilla.org/en-US/docs/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3F

Thank you :-)
Assignee: nobody → steve
Keywords: checkin-needed
Attached patch 929439.diffSplinter Review
Patch updated to list the author line.  Sorry
Attachment #820314 - Attachment is obsolete: true
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/0787526e0ed6
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: