Bug 929439 - Include string.h for memcpy. r=bgirard